tests/functional/lang/eval-fail-tail-1.err.exp
error:
       … while calling the 'tail' builtin
         at /pwd/lang/eval-fail-tail-1.nix:1:1:
            1| builtins.tail 1
             | ^
            2|

       … while evaluating the first argument passed to 'builtins.tail'

       error: expected a list but found an integer: 1
